# xtract2fil

./: .gitignore  LICENSE  MANIFEST.in  justfile  pyproject.toml  setup.cfg
src/xtract2fil/: __main__.py
