[metadata]
name =  xtract2fil
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
long_description = file: README.md
author_email = "ujjwalpanda97@gmail.com"
long_description_content_type = text/markdown
description = "eXtract raw data from the SPOTLIGHT system to SIGPROC filterbank files."

project_urls =
    Home Page = https://github.com/nsmspotlight/xtract2fil
    Source Code = https://github.com/nsmspotlight/xtract2fil
    Documentation = https://github.com/nsmspotlight/xtract2fil
    Bug Reports = https://github.com/nsmspotlight/xtract2fil/issues

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.8
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

install_requires =
  rich
  pytz
  numpy
  priwo
  pandas
  astropy
  cyclopts

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  xtract2fil = xtract2fil.__main__:app
